--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>This is my test page</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="app.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
    </head>
   <body>
     <h1>OMG this is my new github page</h1>
