--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>OMG this is my new github page</h1>
     <H2>This is huge</H2>
+    <h3>Another one bites the dust</h3>
     <p>And this is my first paragraph inside new github page</p>
     <p>I could probably repear my last paragraph for no whatsover reason</p>
     <p>And this is my first paragraph inside new github page</p>
