--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    </head>
   <body>
     <h1>OMG this is my new github page</h1>
+    <h2 class="">Ovo je prvi dodatak</h2>
     <H2>This is huge</H2>
     <h3>Another one bites the rust</h3>
     <h3 class="">Ovo je drugi dodatak</h3>
