--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2 class="">Ovo je prvi dodatak</h2>
     <H2>This is huge</H2>
     <h3>Another one bites the rust</h3>
+    <h3 class="">Ovo je drugi dodatak</h3>
     <p>And this is my first paragraph inside new github page</p>
     <p>I could probably repear my last paragraph for no whatsover reason</p>
     <p>And this is my first paragraph inside new github page</p>
