--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>And this is my first paragraph inside new github page</p>
     <p>I could probably repear my last paragraph for no whatsover reason</p>
     <p>And this is my first paragraph inside new github page</p>
+    <p class="">Ovo je treći dodatak</p>
   </body>
 </html>
 
